# polars_tut

./: .gitignore  DataFramePropAndMethods.ipynb  LazyFrameMethProp.ipynb  Polars + Dask.ipynb  Primera Prueba.ipynb  dataframe.xlsx  gettingstarted.ipynb  primero.ipynb  pyproject.toml
data/: basic_chart.xlsx  ejemplo.parquet  multi_frame.xlsx  new_file.parquet  prueba.json  salida.xlsx  salida2.xlsx  test_csv1.csv  test_csv2.csv  test_csv3.csv  test_csv4.csv  test_csv5.csv  test_csv6.csv  test_csv7.csv  test_csv8.csv  test_csv9.csv
data/partitioned_object/watermark=1/: a3dc8ee906cd4910bdfae54201769be3-0.parquet
data/partitioned_object/watermark=2/: a3dc8ee906cd4910bdfae54201769be3-0.parquet
